--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.1",
     "gulp-jshint": "^2.0.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
